Working mail service with sample e-mail template